<resources>
    <string name="app_name">APM</string>
    <string name="online">Online</string>
    <string name="noClient">No Online Computer</string>
    <string name="pull_to_refresh">Pull down to refresh the list</string>
    <string name="attention">Attention</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="shutdown_prompt">will be shutdown.</string>
    <string name="restart_prompt">will be restart.</string>
    <string name="lock_prompt">will be locked.</string>
    <string name="computer_name">Computer Name</string>
    <string name="ip_address" translatable="false">192.168.1.2:5000</string>
    <string name="lock">Lock</string>
    <string name="restart">Restart</string>
    <string name="shutdown">Shutdown</string>
    <string name="screenshot">Screenshot</string>
    <string name="user_name">User Name</string>
    <string name="refresh">Refresh</string>
    <string name="apm">Advanced Power Menu</string>
    <string name="screenshot_view">Screenshot View</string>
    <string name="port">Port</string>
    <string name="port_info">Must be between 1024 and 64511</string>
</resources>