<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/consMain"
    android:layout_marginTop="10dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:paddingTop="7dp"
    android:paddingBottom="7dp"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:background="@drawable/rounded_rectangle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/consBottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivComputer"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/computer"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="@id/consTop"
        app:layout_constraintTop_toTopOf="@id/consTop" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consMiddle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/consTop"
        app:layout_constraintEnd_toEndOf="@id/consTop"
        app:layout_constraintStart_toEndOf="@id/ivComputer"
        app:layout_constraintTop_toTopOf="@id/consTop">

        <TextView
            android:id="@+id/tvClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="20sp"
            android:hint="@string/computer_name"
            app:layout_constraintStart_toStartOf="@id/consMiddle"
            app:layout_constraintTop_toTopOf="@id/consMiddle"
            app:layout_constraintBottom_toTopOf="@id/tvUserName"/>

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="14sp"
            android:hint="@string/user_name"
            app:layout_constraintStart_toStartOf="@id/consMiddle"
            app:layout_constraintTop_toBottomOf="@id/tvIpAddress"
            app:layout_constraintBottom_toTopOf="@id/tvIpAddress"/>

        <TextView
            android:id="@+id/tvIpAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:textSize="13sp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:hint="@string/ip_address"
            app:layout_constraintStart_toStartOf="@id/consMiddle"
            app:layout_constraintTop_toBottomOf="@id/tvUserName"/>

        <TextView
            android:id="@+id/tvOnline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/colorOnline"
            android:text="@string/online"
            app:layout_constraintStart_toStartOf="@id/consMiddle"
            app:layout_constraintTop_toBottomOf="@id/tvIpAddress"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ibAction"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:padding="15dp"
        android:src="@drawable/ic_down"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toEndOf="@id/consTop"
        app:layout_constraintTop_toTopOf="@id/consTop"
        app:layout_constraintBottom_toBottomOf="@id/consTop"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:clipChildren="false"
        app:layout_constraintTop_toBottomOf="@id/consTop"
        app:layout_constraintStart_toStartOf="@id/consMain"
        app:layout_constraintBottom_toBottomOf="@id/consMain"
        app:layout_constraintEnd_toEndOf="@id/consMain">

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:background="@color/colorLine"
            app:layout_constraintBottom_toTopOf="@id/consControl"
            app:layout_constraintTop_toTopOf="@id/consBottom"
            app:layout_constraintStart_toEndOf="@id/consBottom"
            app:layout_constraintEnd_toEndOf="@id/consBottom"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consControl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/line"
            app:layout_constraintBottom_toBottomOf="@id/consBottom"
            app:layout_constraintEnd_toEndOf="@id/consBottom"
            app:layout_constraintStart_toStartOf="@id/consBottom">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/consShutdown"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/consRestart"
                app:layout_constraintStart_toStartOf="@id/consControl"
                app:layout_constraintTop_toTopOf="@id/consControl"
                app:layout_constraintBottom_toBottomOf="@id/consControl">

                <TextView
                    android:id="@+id/txtShutdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shutdown"
                    android:textSize="13sp"
                    android:textColor="@color/colorText"
                    app:layout_constraintTop_toTopOf="@id/consShutdown"
                    app:layout_constraintStart_toStartOf="@id/consShutdown"
                    app:layout_constraintEnd_toEndOf="@id/consShutdown"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ibShutdown"
                    android:layout_width="@dimen/control_button_size"
                    android:layout_height="@dimen/control_button_size"
                    android:src="@drawable/ic_shutdown"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/app_name"
                    android:focusable="true"
                    android:scaleType="fitXY"
                    android:tint="@color/colorControlButton"
                    app:layout_constraintTop_toBottomOf="@id/txtShutdown"
                    app:layout_constraintStart_toStartOf="@id/consShutdown"
                    app:layout_constraintEnd_toEndOf="@id/consShutdown"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/consRestart"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/consShutdown"
                app:layout_constraintTop_toTopOf="@id/consControl"
                app:layout_constraintBottom_toBottomOf="@id/consControl"
                app:layout_constraintEnd_toStartOf="@id/consLock">

                <TextView
                    android:id="@+id/txtRestart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restart"
                    android:textSize="13sp"
                    android:textColor="@color/colorText"
                    app:layout_constraintTop_toTopOf="@id/consRestart"
                    app:layout_constraintStart_toStartOf="@id/consRestart"
                    app:layout_constraintEnd_toEndOf="@id/consRestart"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ibRestart"
                    android:layout_width="@dimen/control_button_size"
                    android:layout_height="@dimen/control_button_size"
                    android:src="@drawable/ic_restart"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/app_name"
                    android:focusable="true"
                    android:scaleType="fitXY"
                    android:tint="@color/colorControlButton"
                    app:layout_constraintTop_toBottomOf="@id/txtRestart"
                    app:layout_constraintStart_toStartOf="@id/consRestart"
                    app:layout_constraintEnd_toEndOf="@id/consRestart"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/consLock"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/consRestart"
                app:layout_constraintTop_toTopOf="@id/consControl"
                app:layout_constraintBottom_toBottomOf="@id/consControl"
                app:layout_constraintEnd_toStartOf="@id/consScreenshot">

                <TextView
                    android:id="@+id/txtLock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lock"
                    android:textSize="13sp"
                    android:textColor="@color/colorText"
                    app:layout_constraintTop_toTopOf="@id/consLock"
                    app:layout_constraintStart_toStartOf="@id/consLock"
                    app:layout_constraintEnd_toEndOf="@id/consLock"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ibLock"
                    android:layout_width="@dimen/control_button_size"
                    android:layout_height="@dimen/control_button_size"
                    android:src="@drawable/ic_lock"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/app_name"
                    android:focusable="true"
                    android:scaleType="fitXY"
                    android:tint="@color/colorControlButton"
                    app:layout_constraintTop_toBottomOf="@id/txtLock"
                    app:layout_constraintStart_toStartOf="@id/consLock"
                    app:layout_constraintEnd_toEndOf="@id/consLock"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/consScreenshot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/consLock"
                app:layout_constraintTop_toTopOf="@id/consControl"
                app:layout_constraintBottom_toBottomOf="@id/consControl"
                app:layout_constraintEnd_toEndOf="@id/consControl">

                <TextView
                    android:id="@+id/txtScreenshot"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/screenshot"
                    android:textSize="13sp"
                    android:textColor="@color/colorText"
                    app:layout_constraintTop_toTopOf="@id/consScreenshot"
                    app:layout_constraintStart_toStartOf="@id/consScreenshot"
                    app:layout_constraintEnd_toEndOf="@id/consScreenshot"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ibScreenshot"
                    android:layout_width="@dimen/control_button_size"
                    android:layout_height="@dimen/control_button_size"
                    android:src="@drawable/ic_screenshot"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/app_name"
                    android:focusable="true"
                    android:scaleType="fitXY"
                    android:tint="@color/colorControlButton"
                    app:layout_constraintTop_toBottomOf="@id/txtScreenshot"
                    app:layout_constraintStart_toStartOf="@id/consScreenshot"
                    app:layout_constraintEnd_toEndOf="@id/consScreenshot"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>